add-opens for jdk16
Signed-off-by: olivier lamy <oliver.lamy@gmail.com>